changes and fixes: - signup.html is changed. "username" is deleted and the DB and the other  files are changed to match it. - the drop downs work on all pages. - the visuals of "Insert" are fixed. - the "map.php" now shows the route from a chosen branch to the hard-coded customer address. (I will connect it to the DB later) - the CSS of the signup, forgot and signin is also changed a bit. - the "store" DB table now has postalCode and the map works with that. - the "nav" and "nav_admin" are edited and fixed a bit, but the BD maint. still needs for (Sahar's part) - The "aboutUs" and "contactUs" were missing their CSS files so I added those.

--- a/CSS/map.css
+++ b/CSS/map.css
@@ -8,6 +8,14 @@ tr{
 }
 #map{
   height: 60vmin;
-  width: 80%;
+  width: 100%;
   color: black;
+  border: solid;
+  border-width: 2vmin;
+  border-color: azure;
 } 
+#mapdiv{
+  width: 80%;
+  height: 60vmin;
+
+}
