everything works other than SPA

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -55,7 +55,7 @@
     display:inline-block;
     text-align:center;
     border-radius:50%;
-    border:1px solid #ccc;
+    border:1px solid #fdf4fc;
     margin:0 8px;
     color:inherit;
     opacity:0.75;
